Wrap on whitespace to fix overflow on X

--- a/_sass/includes/_katex.scss
+++ b/_sass/includes/_katex.scss
@@ -1,3 +1,7 @@
 .katex-display {
   overflow: visible;
 }
+
+.katex {
+  whitespace: wrap;
+}
